# turing-lib

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  turing.pest
Examples/: Example1.tm  test.tm
src/: instruction.rs  lib.rs  turing.rs  warnings.rs
src/composition/: bound_diff.tm  div2.tm  duplicate.tm  mod.tm  sum.tm
