[package]
name = "turing-lib"
version = "2.0.0"
edition = "2021"
authors = ["Marcos Gutiérrez Alonso <uo272509@uniovi.es>"]
repository = "https://github.com/turing-marcos/turing-lib"
description = "Turing library for Rust"
license = "GPL-2.0-only"
readme = "README.md"
exclude = ["**/Examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2.5"
pest_derive = "^2.5"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "^1.0", features = ["derive"] }
