[package]
name = "turing-lib"
version = "2.1.1"
edition = "2021"
authors = ["Marcos Gutiérrez Alonso <uo272509@uniovi.es>"]
repository = "https://github.com/turing-marcos/turing-lib"
description = "Turing library for Rust"
license = "GPL-2.0-only"
readme = "README.md"
exclude = ["**/Examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2.7"
pest_derive = "^2.7"
log = "^0.4"
env_logger = "^0.10"
serde = { version = "^1.0", features = ["derive"] }
